@@ -99,6 +99,11 @@ struct adsym
 #define	S_CPU	81
 
 /*
+ * CS08 Instructions
+ */
+#define	X_CS08	90
+
+/*
  * Processor Types (S_CPU)
  */
 #define	X_HC08	0
